# ideas-toolbox-public-template

./: .gitignore  Makefile  README.md  check_tool_output.sh  cookiecutter.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: main.yaml
hooks/: post_gen_project.py
ideas-toolbox-{{cookiecutter.repo_name}}/: .gitignore  Dockerfile.idps  Dockerfile.simple  Makefile  README.md  check_tool.sh  function_caller.py  install_imported_code.sh  pyproject.toml  setup.py
ideas-toolbox-{{cookiecutter.repo_name}}/info/: toolbox_info.json
ideas-toolbox-{{cookiecutter.repo_name}}/toolbox/tools/: cellsets.py
tests/: test_function_caller.py  toolbox_info.json
tests/commands/: example_tool__test_func_1.sh
tests/inputs/: example_tool__test_func_1.json
