[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.black]
line-length = 79

[tool.poetry]
name = "toolbox-new-template"
version = "0.1.0"
description = ""
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
configobj = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
